<resources>
    <string name="app_name">Capstone Design</string>

    <!-- 에뮬레이터 -->
<!--    <string name="server_http_port">http://10.0.2.2:8080/api/</string>-->
    <!-- 서버 http, port -->
        <string name="server_http_port">http://13.125.162.225:8080/api/</string>
    <!-- 네이버 검색 API URL -->
    <string name="naver_search_api_url">https://openapi.naver.com/v1/</string>
    <!-- 로그인 http, port -->
    <!--    <string name="server_login">http://13.125.162.225:8080/</string>-->

    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="sign_up">회원가입</string>
    <string name="contour">|</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="maintain_login_info">자동 로그인 및 로그인 상태 유지</string>
    <string name="login_button">로그인</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_home">Home</string>
    <string name="title_records">Records</string>
    <string name="title_community">Community</string>
    <string name="title_campaign">Campaign</string>
    <string name="alcohol">술</string>
    <string name="alcohol_en">alcohol</string>
    <string name="alcohol_title"><u>Alcohol</u></string>
    <string name="tobacco">담배</string>
    <string name="tobacco_en">tobacco</string>
    <string name="tobacco_title"><u>Tobacco</u></string>
    <string name="measure_button">측정하기</string>
    <string name="measure_alcohol">음주 측정</string>
    <string name="measure_tobacco">흡연 측정</string>

    <string name="defTitle">여기를 눌러서 글을 작성할 수 있습니다.\n\n[홍보게시물 작성 금지]\n1.링크 클릭,추천인 입력\n2.글 작성.계정 공유 요청 등 게시물 대리 작성 행위\n3.공동구매,펀딩,기부금품 요청행위\n4.그 외 모든 직간접적 광고.홍보.판매 행위 \n
     \n[선거,정당.정치인 관련 게시물 작성 금지]\n1.정당.정치인,선거 후보자 및 관련자에 대한 비방,비하,모욕\n2.선거 후보자에 대한 지지.홍보 및 선거운동 활동\n
    3.여론조사 결과 인용\n\n[커뮤니티 이용규칙에 어긋나는 행위 금지]\n1.게시판의 스크린샷,게시물 내용 유출\n2.욕설,비하,음란물,개인정보가 포함된 게시물 게시\n3.특정인이나 단체/지역을 비방하는 행위\n4.기타 약관 및 현행법에 어긋나는 행위</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="certification_title">인증번호 숫자 5자리를 입력해 주세요.\n(2/3)</string>
    <string name="certification_warning">(인증번호 3회이상 오류시 12시간 내에 접속이 불가능 합니다.)</string>
    <string name="certification_hint">ex)12345</string>
    <string name="certification_next">다음</string>
    <string name="email_title">이메일을 입력해 주세요.\n(1/5)</string>
    <string name="email_warning">앞으로 로그인할 아이디를 입력합니다.</string>
    <string name="email_hint">exapmle@naver.com</string>
    <string name="email_next">다음</string>
    <string name="password_title">6자 이상의 비밀번호를 만드시오.\n(3/5)</string>
    <string name="password_warning">(영문,숫자,혼용 가능)</string>
    <string name="password_hint">비밀번호 입력</string>
    <string name="password_rehint">비밀번호 확인</string>
    <string name="password_finished">완료</string>
    <string name="community_writing_title_hint">제목을 입력하세요.</string>

    <string name="community_title">제목</string>
    <string name="community_context">내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용내용</string>
    <string name="community_date">2020.05.16.</string>
    <string name="community_writer">박웅기</string>
    <string name="community_like_num">0</string>
    <string name="community_comment_num">0</string>
    <string name="comment_image">TODO</string>
    <string name="like_image">TODO</string>
    <string name="community_page_context">내용내용내용내용내용내용내용내용내용내용내용</string>
    <string name="community_page_date">2020.05.16</string>
    <string name="community_page_writer">박웅기</string>
    <string name="community_page_comment_num">0</string>
    <string name="community_page_like_num">0</string>
    <string name="community_option_writing">글쓰기</string>
    <string name="community_option_search">Search</string>
    <string name="community_writing_title">저장</string>
    <string name="find_password_certification_button">다음</string>

</resources>
