<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_img2"
    android:clipChildren="false"
    tools:context=".auth.LoginActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/edittext_horizontal_padding"
        android:paddingRight="@dimen/edittext_horizontal_padding"
        android:text="dndrl@naver.com"
        android:textSize="@dimen/edittext_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.706">

        <CheckBox
            android:id="@+id/cbLoginMaintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorWhite" />

        <TextView
            android:id="@+id/tvLoginMaintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintain_login_info"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/sample_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/sample_padding2"
            android:layout_marginRight="@dimen/sample_padding2"
            android:text="@string/contour"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tvFindPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_password"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="오토 삘 힌트는 뭐지"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/edittext_horizontal_padding"
        android:paddingRight="@dimen/edittext_horizontal_padding"
        android:text="1234"
        android:textSize="@dimen/edittext_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_button"
        android:text="@string/login_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.514" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Non-Login Test"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>