<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools:"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:paddingTop="@dimen/small_padding"
    android:paddingLeft="@dimen/common_padding"
    android:paddingRight="@dimen/common_padding">

    <TextView
        android:id="@+id/tvWritingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:text="@string/community_title"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWritingContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:text="@string/community_page_context"
        android:textColor="@color/colorDarkGray"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWritingTitle" />

    <TextView
        android:id="@+id/tvWrittenDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:text="@string/community_page_date"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWritingContent" />

    <TextView
        android:id="@+id/tvWriter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/small_padding"
        android:paddingEnd="@dimen/small_padding"
        android:text="@string/community_page_writer"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvWrittenDate"
        app:layout_constraintTop_toBottomOf="@+id/tvWritingContent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/small_padding"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWritingContent">

        <ImageView
            android:id="@+id/ivCommentCount"
            android:layout_width="14dp"
            android:layout_height="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvCommentCount"
            app:layout_constraintTop_toBottomOf="@+id/tvWritingContent"
            app:layout_constraintVertical_bias="0.555"
            app:srcCompat="@drawable/ic_chat_bubble_outline_cyan_24dp" />

        <TextView
            android:id="@+id/tvCommentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community_page_comment_num"
            android:textColor="@color/colorCyan"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWritingContent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/small_padding"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/tvWritingContent">

        <ImageView
            android:id="@+id/ivLike"
            android:layout_width="14dp"
            android:layout_height="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvLikeCount"
            app:layout_constraintTop_toBottomOf="@+id/tvWritingContent"
            app:srcCompat="@drawable/ic_favorite_border_red" />

        <TextView
            android:id="@+id/tvLikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community_page_like_num"
            android:textColor="@color/colorRed"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivCommentCount"
            app:layout_constraintTop_toBottomOf="@+id/tvWritingContent"
            app:layout_constraintVertical_bias="0.625" />

    </LinearLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWrittenDate" />

</androidx.constraintlayout.widget.ConstraintLayout>